src/objects/SBA_Loan_History__c.object
<CustomObject>
    <description>Objects captures all prior SBA Loans</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>SBA Loan History</relationshipLabel>
        <relationshipName>SBA_Loan_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applicant_s_Name__c</fullName>
        <label>Applicant&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>SBA Loan History</relationshipLabel>
        <relationshipName>SBA_Loan_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Number_Of_Loans__c</fullName>
        <description>Number of SBA loans current</description>
        <inlineHelpText>Number of SBA loans current</inlineHelpText>
        <label>Current Number Of Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delinq_Liquid_Loans__c</fullName>
        <description>Number of SBA loans delinq / liquid</description>
        <inlineHelpText>Number of SBA loans delinquencies</inlineHelpText>
        <label>Delinq_Liquid_Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Role__c</fullName>
        <label>Entity Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <label>Error Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <label>Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <label>Interface_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Name__c</fullName>
        <label>Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Name__c</fullName>
        <label>Loan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Status_Code_Description__c</fullName>
        <label>Loan Status Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Status_Code__c</fullName>
        <label>Loan Status Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type_Program__c</fullName>
        <label>Loan Type Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loans_Charged_Off__c</fullName>
        <description>Number of SBA loans charged off</description>
        <label>Loans_Charged_Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Due_Date__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Loans__c</fullName>
        <description>Number of other SBA loans</description>
        <inlineHelpText>Number of other SBA loans</inlineHelpText>
        <label>Other_Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Method_Description__c</fullName>
        <label>Processing Method Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested_By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date_c__c</fullName>
        <description>Date and time SBA history was requested</description>
        <inlineHelpText>Date and time SBA history was requested</inlineHelpText>
        <label>Requested_Date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Servicing_Office_Code__c</fullName>
        <label>Servicing Office Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Office_Description__c</fullName>
        <label>Servicing Office Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Applicant Tax ID</description>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SBA Loan History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Applicant__c</columns>
        <columns>Tax_ID__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Description__c</columns>
        <columns>Loan_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SBA History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SBA Loan History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>